SERVER-123598 CursorEstablisher returns retry cancellation over original failure (#52356)

GitOrigin-RevId: 8b6180aa58875d1326b571c578b6f52f3b823ba6